@@ -29,12 +29,12 @@ MORSE          [ ]     [ ]     [ ]    [ ]
 RIG_SCAN       [ ]     [ ]     [ ]    [ ]
 RIG_MEM        [ ]     [ ]     [ ]    [ ]
 LEV_STRGTH     [X]     [X]     [-]    [X]
-LEV_RF_PWR     [x]     [X]     [X]    [x]
+LEV_RF_PWR     [X]     [X]     [X]    [X]
 LEV_SWR        [X]     [X]     [-]    [X]
-LEV_ALC        [x]     [X]     [-]    [x]
-LEV_VOX_DEL    [X]     [ ]     [ ]    [X]
-LEV_VOX_GAIN   [X]     [ ]     [ ]    [X]
-LEV_ANTIVOX    [X]     [ ]     [ ]    [X]
+LEV_ALC        [X]     [X]     [-]    [X]
+LEV_VOX_DEL    [X]     [X]     [ ]    [X]
+LEV_VOX_GAIN   [X]     [X]     [ ]    [X]
+LEV_ANTIVOX    [X]     [X]     [ ]    [X]
 LEV_AFG        [X]     [X]     [ ]    [X]
 LEV_RFG        [X]     [X]     [ ]    [X]
 LEV_SQL        [X]     [X]     [ ]    [X]
@@ -44,10 +44,12 @@ LEV_NR         [X]     [X]     [ ]    [X]
 LEV_PBT_IN     [X]     [X]     [ ]    [X]
 LEV_PBT_OUT    [X]     [X]     [ ]    [X]
 LEV_CWPITCH    [X]     [X]     [ ]    [X]
-LEV_MICG       [X]     [ ]     [ ]    [X]
-LEV_KEYSPD     [X]     [ ]     [ ]    [X]
+LEV_MICG       [X]     [X]     [ ]    [X]
+LEV_KEYSPD     [X]     [X]     [ ]    [X]
 LEV_NOTCHF     [X]     [X]     [ ]    [X]
-LEV_COMP       [X]     [ ]     [ ]    [X]
-LEV_BKINDEL    [X]     [ ]     [ ]    [X]
-LEV_BALANCE    [X]     [ ]     [ ]    [X] 
+LEV_COMP       [X]     [X]     [ ]    [X]
+LEV_BKINDEL    [X]     [X]     [ ]    [X]
+LEV_BALANCE    [X]     [X]     [ ]    [X] 
 LEV_METER      [ ]     [ ]     [ ]    [ ]
+FUNC_XYZ       [ ]     [ ]     [ ]    [ ]
+
