@@ -11,9 +11,9 @@ grig \- graphical user interface for the Ham Radio Control Libraries (hamlib)
 .SH "DESCRIPTION"
 .\" Add any additional description here
 .PP 
-Grig is a simple graphical user interface for the Ham Radio Control Libraries. It is intended to be highly generic presenting the user to the same interface regardless of which radio is being controled.
+Grig is a simple Ham Radio control (CAT) program based on the Ham Radio Control Libraries. It is intended to be highly generic presenting the user to the same graphical user interface regardless of which radio is being controlled.
 .PP
-The way grig interacts with hamlib is controlled via command line options. Mandatory arguments to long options are mandatory for short options too.
+Grig does not store any radio configuration, instead it takes a number of command line options.
 .TP 
 \fB\-m\fR, \fB\-\-model\fR=\fIID\fR
 select radio model number; see \fB\-\-list\fR
@@ -98,6 +98,14 @@ You can then use the Message Window in the View menu to view these messages. The
 debug messages printed by grig a formatted in a structured way with each line
 containing both time, source and level of the message. Each field is separated
 with ;; so you can also import the log file into a spread sheet for further analysis.
+
+.SH "FEATURES"
+.TP
+Grig @VERSION@ supports the most commonly used CAT command implemented by hamlib. These
+include frequency, mode, filter and various level settings. Please note that not all
+features have been thoroughly tested since I don't have access to any modern high-end
+radios. Therefore, comments regarding success or failure in using grig will be highly
+appreciated.
 
 .SH "KNOWN BUGS AND LIMITATIONS"
 .TP
